[package]
name = "mongosqlwrapper"
version = "0.1.0"
edition = "2021"
description = "A Rust library for converting SQL queries to MongoDB query language (MQL)"
license = "Apache-2.0"

[lib]
name = "mongosqlwrapper"
crate-type = ["staticlib", "cdylib"]

[dependencies]
mongosql = { git = "https://github.com/viamrobotics/mongosql.git" }
serde_json = "1.0" 
